--- a/index.html
+++ b/index.html
@@ -3,22 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css?v=1" />
+    <title>BsMentor</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+      <div class="nav-mark">
+        <img src="./img/mark.svg" alt="mark" onclick="closeNav()" class="pointer">
+      </div>
+      <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
         >&times;</a
-      >
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
+      > -->
+      <div class="sidenav-text">
+        <a href="#" class="poppins fsize-35">Главная</a>
+        <a href="#" class="poppins fsize-35">Бравлеры</a>
+        <a href="#" class="poppins fsize-35">Карты</a>
+      </div>
     </div>
 
-    <div class="nav">
-      <span class="open" onclick="openNav()">open</span>
+    <div class="top-nav">
+      <div>
+        <span class="museomoderno fcolor-y fsize-35">BM</span>
+        <span class="museomoderno fcolor-w opacity-50 fsize-30 beta-text"
+          >beta</span
+        >
+      </div>
+      <div>
+        <img
+          src="./img/menu-ico.svg"
+          alt="menu"
+          onclick="openNav()"
+          class="pointer"
+        />
+      </div>
     </div>
 
     <script>
